# QtProjectCollection

./: README.md
CustomTitleBar/: .gitignore  CMakeLists.txt  README.md
CustomTitleBar/include/: framelesswindow.h  stdafx.h  stylewindow.h  titlebar.h  windoweffect.h
CustomTitleBar/resources/qrc/: demo.qrc
CustomTitleBar/resources/qss/: demo.qss
CustomTitleBar/scripts/: build-win-x86.bat
CustomTitleBar/src/: framelesswindow.cc  main.cc  stdafx.cc  stylewindow.cc  titlebar.cc  windoweffect.cc
SideBar/: CMakeLists.txt  README.md
SideBar/include/: mainwindow.h  permissionwindow.h  settingswindow.h  userwindow.h
SideBar/resources/qrc/: resources.qrc
SideBar/scripts/: convert_ui2header.bat  run.bat
SideBar/src/: mainwindow.cc  permissionwindow.cc  settingswindow.cc  userwindow.cc
SideBar/ui/: mainwindow.ui  permissionwindow.ui  settingswindow.ui  ui_mainwindow.h  ui_permissionwindow.h  ui_settingswindow.h  ui_userwindow.h  userwindow.ui
SideBarPlus/: CMakeLists.txt  README.md
SideBarPlus/include/: aboutwindow.h  mainwindow.h  monitorwindow.h  settingwindow.h
SideBarPlus/resources/qrc/: ico.qrc
SideBarPlus/scripts/: convert_ui2header.bat  run.bat
SideBarPlus/src/: aboutwindow.cc  homewindow.cc  main.cc  mainwindow.cc  monitorwindow.cc  settingwindow.cc
SideBarPlus/ui/: aboutwindow.ui  homewindow.ui  mainwindow.ui  monitorwindow.ui  settingwindow.ui  ui_aboutwindow.h  ui_homewindow.h  ui_mainwindow.h  ui_monitorwindow.h  ui_settingwindow.h
